CSR-Test/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "extensions_enablevmaccess_username": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_enablevmaccess_password": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_enablevmaccess_username_1": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_enablevmaccess_password_1": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "disks_AR_VM_1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6_name": {
            "defaultValue": "AR-VM-1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6",
            "type": "String"
        },
        "disks_AR_VM_2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5_name": {
            "defaultValue": "AR-VM-2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5",
            "type": "String"
        },
        "virtualMachines_AR_VM_1_name": {
            "defaultValue": "AR-VM-1",
            "type": "String"
        },
        "virtualMachines_AR_VM_2_name": {
            "defaultValue": "AR-VM-2",
            "type": "String"
        },
        "virtualMachines_CSR1_name": {
            "defaultValue": "CSR1",
            "type": "String"
        },
        "networkInterfaces_AR_NIC_1_name": {
            "defaultValue": "AR-NIC-1",
            "type": "String"
        },
        "networkInterfaces_AR_NIC_2_name": {
            "defaultValue": "AR-NIC-2",
            "type": "String"
        },
        "networkInterfaces_CSR1_Nic0_name": {
            "defaultValue": "CSR1-Nic0",
            "type": "String"
        },
        "networkInterfaces_CSR1_Nic1_name": {
            "defaultValue": "CSR1-Nic1",
            "type": "String"
        },
        "networkInterfaces_CSR1_Nic2_name": {
            "defaultValue": "CSR1-Nic2",
            "type": "String"
        },
        "networkInterfaces_CSR1_Nic3_name": {
            "defaultValue": "CSR1-Nic3",
            "type": "String"
        },
        "networkSecurityGroups_AR_NSG1_name": {
            "defaultValue": "AR-NSG1",
            "type": "String"
        },
        "networkSecurityGroups_CSR1_SSH_SecurityGroup_name": {
            "defaultValue": "CSR1-SSH-SecurityGroup",
            "type": "String"
        },
        "publicIPAddresses_csr_pip_name": {
            "defaultValue": "csr-pip",
            "type": "String"
        },
        "publicIPAddresses_mypublicdns1875121347_name": {
            "defaultValue": "mypublicdns1875121347",
            "type": "String"
        },
        "publicIPAddresses_mypublicdns2039028167_name": {
            "defaultValue": "mypublicdns2039028167",
            "type": "String"
        },
        "routeTables_VNet1_Sub1_CSR_RouteTable_name": {
            "defaultValue": "VNet1-Sub1-CSR-RouteTable",
            "type": "String"
        },
        "routeTables_VNet1_Sub2_CSR_RouteTable_name": {
            "defaultValue": "VNet1-Sub2-CSR-RouteTable",
            "type": "String"
        },
        "routeTables_VNet1_Sub3_CSR_RouteTable_name": {
            "defaultValue": "VNet1-Sub3-CSR-RouteTable",
            "type": "String"
        },
        "routeTables_VNet1_Sub4_CSR_RouteTable_name": {
            "defaultValue": "VNet1-Sub4-CSR-RouteTable",
            "type": "String"
        },
        "virtualNetworks_vnet01_name": {
            "defaultValue": "vnet01",
            "type": "String"
        },
        "storageAccounts_adraffecsr_name": {
            "defaultValue": "adraffecsr2",
            "type": "String"
        },
        "extensions_enablevmaccess_name": {
            "defaultValue": "AR-VM-1/enablevmaccess",
            "type": "String"
        },
        "extensions_enablevmaccess_name_1": {
            "defaultValue": "AR-VM-2/enablevmaccess",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/disks/AR-VM-1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_AR_VM_1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "accountType": "Premium_LRS",
                "osType": "Linux",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/Providers/Microsoft.Compute/Locations/westeurope/Publishers/Canonical/ArtifactTypes/VMImage/Offers/UbuntuServer/Skus/14.04.2-LTS/Versions/latest"
                    }
                },
                "diskSizeGB": 30
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/disks/AR-VM-2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_AR_VM_2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "accountType": "Premium_LRS",
                "osType": "Linux",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/Providers/Microsoft.Compute/Locations/westeurope/Publishers/Canonical/ArtifactTypes/VMImage/Offers/UbuntuServer/Skus/14.04.2-LTS/Versions/latest"
                    }
                },
                "diskSizeGB": 30
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/virtualMachines/AR-VM-1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_AR_VM_1_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "14.04.2-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_AR_VM_1_name'),'_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_AR_VM_1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6_name'))]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_AR_VM_1_name')]",
                    "adminUsername": "adraffe",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/adraffe/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDxHHoR6B2XulaMd9GjxDmEJwfv7YidjD9FRhdDeUZLA/Q35T9KmI/jdcY+pStfio2S7Dt9Jo22a9ROQfq4kF1lvgNqmv0q+LZatt5kegJeWXr0nOQIEIW0Y1gWojphUpTQSPtD1Gmg5mdshtze9BnGh+TxMWlir9d3oYmUtQ0y04s3NZEkwFNoBEYzNuq1Y47T25X+8AB9/TXH1eF3NxNsiZrwzXw0UPvJiByTOfoI+zxDpWOk8uy6DRhHTRi5t+A1UMrb/UB38Pa+XZoktsg/cXxE0+eVzbe4H70tiXtQq2TDbfWn2t+KQ2K/GKJAUYp4r/M6jp2pTn17QgLWMAh3 adam.raffe@microsoft.com"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_AR_NIC_1_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', parameters('disks_AR_VM_1_OsDisk_1_c47a931ac2634646a45ce8ccfea6cbd6_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_AR_NIC_1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/virtualMachines/AR-VM-2'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_AR_VM_2_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "14.04.2-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_AR_VM_2_name'),'_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_AR_VM_2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5_name'))]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_AR_VM_2_name')]",
                    "adminUsername": "adraffe",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/adraffe/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDxHHoR6B2XulaMd9GjxDmEJwfv7YidjD9FRhdDeUZLA/Q35T9KmI/jdcY+pStfio2S7Dt9Jo22a9ROQfq4kF1lvgNqmv0q+LZatt5kegJeWXr0nOQIEIW0Y1gWojphUpTQSPtD1Gmg5mdshtze9BnGh+TxMWlir9d3oYmUtQ0y04s3NZEkwFNoBEYzNuq1Y47T25X+8AB9/TXH1eF3NxNsiZrwzXw0UPvJiByTOfoI+zxDpWOk8uy6DRhHTRi5t+A1UMrb/UB38Pa+XZoktsg/cXxE0+eVzbe4H70tiXtQq2TDbfWn2t+KQ2K/GKJAUYp4r/M6jp2pTn17QgLWMAh3 adam.raffe@microsoft.com"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_AR_NIC_2_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', parameters('disks_AR_VM_2_OsDisk_1_ba84c392a33a472da75ed2335ae2f9a5_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_AR_NIC_2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/virtualMachines/CSR1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_CSR1_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "plan": {
                "name": "csr-azure-byol",
                "product": "cisco-csr-1000v",
                "publisher": "cisco"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D3_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "cisco",
                        "offer": "cisco-csr-1000v",
                        "sku": "csr-azure-byol",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_CSR1_name'),'-osDisk')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_adraffecsr_name'), '.blob.core.windows.net', '/vhds/osdiskjobylchehzq46.vhd')]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_CSR1_name')]",
                    "adminUsername": "adraffe",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic0_name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic1_name'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic2_name'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic3_name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_adraffecsr_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_adraffecsr_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic0_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic1_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic2_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_CSR1_Nic3_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/AR-NIC-1'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_AR_NIC_1_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.69",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mypublicdns1875121347_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub2')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_AR_NSG1_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mypublicdns1875121347_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_AR_NSG1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/AR-NIC-2'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_AR_NIC_2_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.133",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mypublicdns2039028167_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub3')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_mypublicdns2039028167_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/CSR1-Nic0'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_CSR1_Nic0_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.4",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_csr_pip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub1')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CSR1_SSH_SecurityGroup_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_csr_pip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_CSR1_SSH_SecurityGroup_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/CSR1-Nic1'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_CSR1_Nic1_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.71",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub2')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/CSR1-Nic2'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_CSR1_Nic2_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.135",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub3')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkInterfaces/CSR1-Nic3'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_CSR1_Nic3_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.30.196",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name')), '/subnets/VNet1-Sub4')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkSecurityGroups/AR-NSG1'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_AR_NSG1_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "AR-SG-SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/networkSecurityGroups/CSR1-SSH-SecurityGroup'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_CSR1_SSH_SecurityGroup_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH-Rule",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "UDP-Rule1",
                        "properties": {
                            "description": "Allow UDP",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "500",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "UDP-Rule2",
                        "properties": {
                            "description": "Allow UDP",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4500",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/publicIPAddresses/csr-pip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_csr_pip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "adraffecsr"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/publicIPAddresses/mypublicdns1875121347'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_mypublicdns1875121347_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/publicIPAddresses/mypublicdns2039028167'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_mypublicdns2039028167_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/routeTables/VNet1-Sub1-CSR-RouteTable'.",
            "type": "Microsoft.Network/routeTables",
            "name": "[parameters('routeTables_VNet1_Sub1_CSR_RouteTable_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "routes": [
                    {
                        "name": "Route-Subnet2-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.64/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.4"
                        }
                    },
                    {
                        "name": "Route-Subnet3-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.128/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.4"
                        }
                    },
                    {
                        "name": "Route-Subnet4-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.192/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.4"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/routeTables/VNet1-Sub2-CSR-RouteTable'.",
            "type": "Microsoft.Network/routeTables",
            "name": "[parameters('routeTables_VNet1_Sub2_CSR_RouteTable_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "routes": [
                    {
                        "name": "Route-Subnet1-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.0/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.71"
                        }
                    },
                    {
                        "name": "Route-Subnet3-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.128/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.71"
                        }
                    },
                    {
                        "name": "Route-Subnet4-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.192/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.71"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/routeTables/VNet1-Sub3-CSR-RouteTable'.",
            "type": "Microsoft.Network/routeTables",
            "name": "[parameters('routeTables_VNet1_Sub3_CSR_RouteTable_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "routes": [
                    {
                        "name": "Route-Subnet1-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.0/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.135"
                        }
                    },
                    {
                        "name": "Route-Subnet2-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.64/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.135"
                        }
                    },
                    {
                        "name": "Route-Subnet4-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.192/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.135"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/routeTables/VNet1-Sub4-CSR-RouteTable'.",
            "type": "Microsoft.Network/routeTables",
            "name": "[parameters('routeTables_VNet1_Sub4_CSR_RouteTable_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "routes": [
                    {
                        "name": "Route-Subnet1-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.0/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.196"
                        }
                    },
                    {
                        "name": "Route-Subnet2-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.64/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.196"
                        }
                    },
                    {
                        "name": "Route-Subnet3-To-CSR",
                        "properties": {
                            "addressPrefix": "192.168.30.128/26",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "192.168.30.196"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Network/virtualNetworks/vnet01'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_vnet01_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.168.30.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "VNet1-Sub1",
                        "properties": {
                            "addressPrefix": "192.168.30.0/26",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub1_CSR_RouteTable_name'))]"
                            }
                        }
                    },
                    {
                        "name": "VNet1-Sub2",
                        "properties": {
                            "addressPrefix": "192.168.30.64/26",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub2_CSR_RouteTable_name'))]"
                            }
                        }
                    },
                    {
                        "name": "VNet1-Sub3",
                        "properties": {
                            "addressPrefix": "192.168.30.128/26",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub3_CSR_RouteTable_name'))]"
                            }
                        }
                    },
                    {
                        "name": "VNet1-Sub4",
                        "properties": {
                            "addressPrefix": "192.168.30.192/26",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub4_CSR_RouteTable_name'))]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub1_CSR_RouteTable_name'))]",
                "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub2_CSR_RouteTable_name'))]",
                "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub3_CSR_RouteTable_name'))]",
                "[resourceId('Microsoft.Network/routeTables', parameters('routeTables_VNet1_Sub4_CSR_RouteTable_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/csr-test/providers/Microsoft.Storage/storageAccounts/adraffecsr'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_adraffecsr_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/virtualMachines/AR-VM-1/extensions/enablevmaccess'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[parameters('extensions_enablevmaccess_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "VMAccessForLinux",
                "typeHandlerVersion": "1.4",
                "autoUpgradeMinorVersion": true,
                "settings": {},
                "protectedSettings": {
                    "username": "[parameters('extensions_enablevmaccess_username')]",
                    "password": "[parameters('extensions_enablevmaccess_password')]"

                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_AR_VM_1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/7855847d-d89f-4bc7-93c4-59623eab44cd/resourceGroups/CSR-Test/providers/Microsoft.Compute/virtualMachines/AR-VM-2/extensions/enablevmaccess'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[parameters('extensions_enablevmaccess_name_1')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "VMAccessForLinux",
                "typeHandlerVersion": "1.4",
                "autoUpgradeMinorVersion": true,
                "settings": {},
                "protectedSettings": {
                    "username": "[parameters('extensions_enablevmaccess_username_1')]",
                    "password": "[parameters('extensions_enablevmaccess_password_1')]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_AR_VM_2_name'))]"
            ]
        }
    ]
}
